Fix header shift issue on transition from small screens.

--- a/assets/sass/_styles.scss
+++ b/assets/sass/_styles.scss
@@ -646,7 +646,7 @@ footer {
         width: 33%;
         max-width: 600px;
         clear: none;
-        margin-right: 5vw;
+        margin-right: 5%;
         font-style: italic;
 
         [data-icon]:before {
